--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Restaurant</title>
+    <title>Restaurant</title>
 </head>
 <body>
-	<h1>Welcome to Restaurant</h1>
-	<p>Please select an option:</p>
-	<button onclick="location.href='page1.html'">Option 1</button>
-	<button onclick="location.href='page2.html'">Option 2</button>
-	<button onclick="location.href='page3.html'">Option 3</button>
+<h1>Welcome to Restaurant</h1>
+<p>Please select an option:</p>
+<button onclick="location.href='login'">login</button>
+<button onclick="location.href='register'">register</button>
+<button onclick="location.href='aboutus'">aboutus</button>
+<button onclick="location.href='contactus'">contactus</button>
+<button onclick="location.href='faqs'">faqs</button>
+<button onclick="location.href='menu'">menu</button>
+<button onclick="location.href='menu_detail'">menu_detail</button>
 </body>
 </html>
