--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Welcome to My App</h1>
 	<p>Please select an option:</p>
-	<button onclick="location.href='page1.html'">Option 1</button>
+	<button onclick="location.href='login'">login</button>
 	<button onclick="location.href='page2.html'">Option 2</button>
 	<button onclick="location.href='page3.html'">Option 3</button>
 </body>
