--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -45,10 +45,7 @@
             About Us</h3>
     </div>
     <div id="about-us">
-        <h4 style="text-align: center; font-size: 20px; color: rgb(56, 107, 141); font-family: MV Boli;">Lorem ipsum
-            dolor sit amet consectetur adipisicing elit. Pariatur deleniti quibusdam dignissimos veniam
-            ipsa iure beatae assumenda accusamus libero in. Quibusdam optio eveniet corrupti ad asperiores quasi.
-            Cupiditate, sequi repellendus.</h4>
+        <h4 style="text-align: center; font-size: 20px; color: rgb(56, 107, 141); font-family: MV Boli;">想点文本编上，写死就行</h4>
     </div>
     <div class="row">
         <div class="gallery-item" style="float: left; margin-left: 10px;">
