--- a/templates/register.html
+++ b/templates/register.html
@@ -8,30 +8,35 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
     <style>
-        .login-register-form-section{
+        .login-register-form-section {
             max-width: 350px;
             margin: 120px auto;
         }
-        .login-register-form-section i{
+
+        .login-register-form-section i {
             width: 10px;
         }
-        .login-register-form-section .nav-tabs > li > a{
+
+        .login-register-form-section .nav-tabs > li > a {
             color: black;
             font-family: Tempus Sans ITC;
             font-weight: bold;
             font-size: 30px;
         }
+
         .login-register-form-section .nav-tabs > li > a,
-        .login-register-form-section .nav-tabs > li.active > a{
+        .login-register-form-section .nav-tabs > li.active > a {
             width: 340px;
             text-align: center;
             border-radius: 0;
         }
-        .login-register-form-section .nav-tabs{
+
+        .login-register-form-section .nav-tabs {
             padding-bottom: 10px;
             margin-bottom: 10px;
         }
-        .login-register-form-section .btn-custom{
+
+        .login-register-form-section .btn-custom {
             width: 100%;
             background-color: rgb(10, 147, 165);
             border-color: rgb(10, 147, 165);
@@ -40,88 +45,103 @@
             font-family: Tempus Sans ITC;
             font-weight: bold;
         }
-        .login-register-form-section .btn-custom:hover{
+
+        .login-register-form-section .btn-custom:hover {
             width: 100%;
             background-color: rgb(56, 107, 141);
             border-color: rgb(56, 107, 141);
             font-family: Tempus Sans ITC;
             font-weight: bold;
         }
-        .login-register-form-section .form-group{
+
+        .login-register-form-section .form-group {
             padding: 0 20px;
         }
 
     </style>
 </head>
 <body>
-    <div class="row">
-        <div class="container">
-            <nav class="navbar navbar-default" role="navigation" style="font-family: Tempus Sans ITC; font-size: 20px; font-weight: bold;">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">Delicious</p>
-                        <!-- <a class="navbar-brand" href="#">Delicious</a> -->
-                    </div>
-                    <div>
-                        <ul class="nav navbar-nav">
-                            <li><a href="/">Home</a></li>
-                            <li><a href="/menu">Menu</a></li>
-                            <li><a href="/aboutus">About Us</a></li>
-                            <li><a href="/contactus">Contact Us</a></li>
-                            <li><a href="/faqs">FAQs</a></li>
-                        </ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/login">Log in</a></li>
-                            <li class="active"><a href="/register">Register</a></li>
-                        </ul>
-                    </div>
+<div class="row">
+    <div class="container">
+        <nav class="navbar navbar-default" role="navigation"
+             style="font-family: Tempus Sans ITC; font-size: 20px; font-weight: bold;">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <p style="font-size: 25px; color: rgb(6, 107, 141); text-shadow: 3px 3px 3px darkgray;">
+                        Delicious</p>
+                    <!-- <a class="navbar-brand" href="#">Delicious</a> -->
                 </div>
-            </nav>
-            <div class="login-register-form-section">
-                <ul class="nav nav-tabs" role="tablist">
-                    <li><a href="#register" data-toggle="tab">Register</a></li>
-                </ul>
-                <div class="tab-content">
-                    <div role="tabpanel" class="tab-pane fade in active" id="register">
-                        <form class="form-horizontal" method="post" action="">
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-user"></i></div>
-                                    <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text" name="register_username" class="form-control" placeholder="Username" required="required" value="">
-                                </div>
+                <div>
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/menu">Menu</a></li>
+                        <li><a href="/aboutus">About Us</a></li>
+                        <li><a href="/contactus">Contact Us</a></li>
+                        <li><a href="/faqs">FAQs</a></li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><a href="/login">Log in</a></li>
+                        <li class="active"><a href="/register">Register</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="login-register-form-section">
+            <ul class="nav nav-tabs" role="tablist">
+                <li><a href="#register" data-toggle="tab">Register</a></li>
+            </ul>
+            <div class="tab-content">
+                <div role="tabpanel" class="tab-pane fade in active" id="register">
+                    <form class="form-horizontal" method="post" action="/register/">
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-user"></i></div>
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                       name="register_username" class="form-control" placeholder="Username"
+                                       required="required" value="">
                             </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-phone"></i></div>
-                                    <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text" name="register_phone_number" class="form-control" placeholder="Phone nmuber" required="required" value="">
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-phone"></i></div>
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                       name="register_phone_number" class="form-control" placeholder="Phone nmuber"
+                                       required="required" value="">
                             </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
-                                    <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text" name="register_email" class="form-control" placeholder="E-mail" required="required" value="">
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-envelope"></i></div>
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                       name="register_email" class="form-control" placeholder="E-mail"
+                                       required="required" value="">
                             </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                    <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text" name="register_password" class="form-control" placeholder="Password" required="required" value="">
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-lock"></i></div>
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                       name="register_password" class="form-control" placeholder="Password"
+                                       required="required" value="">
                             </div>
-                            <div class="form-group">
-                                <div class="input-group">
-                                    <div class="input-group-addon"><i class="fa fa-lock"></i></div>
-                                    <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text" name="register_confirm_password" class="form-control" placeholder="Confirm password" required="required" value="">
-                                </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="input-group">
+                                <div class="input-group-addon"><i class="fa fa-lock"></i></div>
+                                <input style="font-family: Tempus Sans ITC;font-weight: bold;" type="text"
+                                       name="register_confirm_password" class="form-control"
+                                       placeholder="Confirm password" required="required" value="">
                             </div>
-                            <input type="submit" value="Register" class="btn btn-success btn-custom">
-                        </form>
-                    </div>
+                        </div>
+                        <input type="submit" value="Register" class="btn btn-success btn-custom">
+                        <span style="color: red;">{{ error }}</span>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
