--- a/templates/menu.html
+++ b/templates/menu.html
@@ -148,9 +148,10 @@
             <div class="col-lg-12 d-flex justify-content-center">
                 <ul id="menu-flters" style="font-family: Tempus Sans ITC; font-size: 18px; font-weight: bolder; ">
                     <li data-filter="*" class="filter-active">Show All</li>
-                    <li data-filter=".filter-starters">Starters</li>
-                    <li data-filter=".filter-salads">Scoup Bowl</li>
-                    <li data-filter=".filter-specialty">Specialty</li>
+                    <li data-filter=".filter-maincourse">main course</li>
+                    <li data-filter=".filter-appetizer">appetizer</li>
+                    <li data-filter=".filter-sweetmeats">sweetmeats</li>
+                    <li data-filter=".filter-drinks">drinks</li>
                 </ul>
             </div>
         </div>
@@ -158,24 +159,95 @@
         <div class="row menu-container">
 
             {% for row in data %}
-                <div class="col-lg-6 menu-item filter-starters">
-                    <div class="menu-content">
-                        <form id={{ row.dishid }} method="post" action="/menu_detail/">
-                            <input type="hidden" name="dishid" value={{ row.dishid }}/>
-                            <input type="hidden" name="dishname" value={{ row.dishname }}/>
-                            <input type="hidden" name="type" value={{ row.type }}/>
-                            <input type="hidden" name="price" value={{ row.price }}/>
-                            <input type="hidden" name="description" value={{ row.description }}/>
-                            <input type="hidden" name="dish_picture" value={{ row.dish_picture }}/>
+                {% if row.type == "maincourse" %}
+                    <div class="col-lg-6 menu-item filter-maincourse">
+                        <div class="menu-content">
+                            <form id={{ row.dishid }} method="post" action="/menu_detail/">
+                                <input type="hidden" name="dishid" value={{ row.dishid }}/>
+                                <input type="hidden" name="dishname" value={{ row.dishname }}/>
+                                <input type="hidden" name="type" value={{ row.type }}/>
+                                <input type="hidden" name="price" value={{ row.price }}/>
+                                <input type="hidden" name="description" value={{ row.description }}/>
+                                <input type="hidden" name="dish_picture" value={{ row.dish_picture }}/>
 
-                            <a onclick="document.getElementById({{ row.dishid }}).submit();">{{ row.dishname }}</a>
+                                <a onclick="document.getElementById({{ row.dishid }}).submit();">{{ row.dishname }}</a>
 
-{#                            <a onclick="sendPost_menu_detail('{{ row.dishid }}', '{{ row.dishname }}', '{{ row.type }}', '{{ row.price }}',  '{{ row.description }}')">{{ row.dishname }}</a>#}
+                                {#                            <a onclick="sendPost_menu_detail('{{ row.dishid }}', '{{ row.dishname }}', '{{ row.type }}', '{{ row.price }}',  '{{ row.description }}')">{{ row.dishname }}</a>#}
 
-                            <span>￡{{ row.price }}</span>
-                        </form>
+                                <span>￡{{ row.price }}</span>
+                            </form>
+                        </div>
                     </div>
-                </div>
+                {% endif %}
+            {% endfor %}
+
+            {% for row in data %}
+                {% if row.type == "appetizer" %}
+                    <div class="col-lg-6 menu-item filter-appetizer">
+                        <div class="menu-content">
+                            <form id={{ row.dishid }} method="post" action="/menu_detail/">
+                                <input type="hidden" name="dishid" value={{ row.dishid }}/>
+                                <input type="hidden" name="dishname" value={{ row.dishname }}/>
+                                <input type="hidden" name="type" value={{ row.type }}/>
+                                <input type="hidden" name="price" value={{ row.price }}/>
+                                <input type="hidden" name="description" value={{ row.description }}/>
+                                <input type="hidden" name="dish_picture" value={{ row.dish_picture }}/>
+
+                                <a onclick="document.getElementById({{ row.dishid }}).submit();">{{ row.dishname }}</a>
+
+                                {#                            <a onclick="sendPost_menu_detail('{{ row.dishid }}', '{{ row.dishname }}', '{{ row.type }}', '{{ row.price }}',  '{{ row.description }}')">{{ row.dishname }}</a>#}
+
+                                <span>￡{{ row.price }}</span>
+                            </form>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+
+            {% for row in data %}
+                {% if row.type == "sweetmeats" %}
+                    <div class="col-lg-6 menu-item filter-sweetmeats">
+                        <div class="menu-content">
+                            <form id={{ row.dishid }} method="post" action="/menu_detail/">
+                                <input type="hidden" name="dishid" value={{ row.dishid }}/>
+                                <input type="hidden" name="dishname" value={{ row.dishname }}/>
+                                <input type="hidden" name="type" value={{ row.type }}/>
+                                <input type="hidden" name="price" value={{ row.price }}/>
+                                <input type="hidden" name="description" value={{ row.description }}/>
+                                <input type="hidden" name="dish_picture" value={{ row.dish_picture }}/>
+
+                                <a onclick="document.getElementById({{ row.dishid }}).submit();">{{ row.dishname }}</a>
+
+                                {#                            <a onclick="sendPost_menu_detail('{{ row.dishid }}', '{{ row.dishname }}', '{{ row.type }}', '{{ row.price }}',  '{{ row.description }}')">{{ row.dishname }}</a>#}
+
+                                <span>￡{{ row.price }}</span>
+                            </form>
+                        </div>
+                    </div>
+                {% endif %}
+            {% endfor %}
+
+            {% for row in data %}
+                {% if row.type == "drinks" %}
+                    <div class="col-lg-6 menu-item filter-drinks">
+                        <div class="menu-content">
+                            <form id={{ row.dishid }} method="post" action="/menu_detail/">
+                                <input type="hidden" name="dishid" value={{ row.dishid }}/>
+                                <input type="hidden" name="dishname" value={{ row.dishname }}/>
+                                <input type="hidden" name="type" value={{ row.type }}/>
+                                <input type="hidden" name="price" value={{ row.price }}/>
+                                <input type="hidden" name="description" value={{ row.description }}/>
+                                <input type="hidden" name="dish_picture" value={{ row.dish_picture }}/>
+
+                                <a onclick="document.getElementById({{ row.dishid }}).submit();">{{ row.dishname }}</a>
+
+                                {#                            <a onclick="sendPost_menu_detail('{{ row.dishid }}', '{{ row.dishname }}', '{{ row.type }}', '{{ row.price }}',  '{{ row.description }}')">{{ row.dishname }}</a>#}
+
+                                <span>￡{{ row.price }}</span>
+                            </form>
+                        </div>
+                    </div>
+                {% endif %}
             {% endfor %}
 
         </div>
