--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -35,10 +35,18 @@
                         <li><a href="/contactus">Contact Us</a></li>
                         <li class="active"><a href="/faqs">FAQs</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="/login">Log in</a></li>
-                        <li><a href="/register">Register</a></li>
-                    </ul>
+                    {% if info_dict == null %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="/login">Log in</a></li>
+                            <li><a href="/register">Register</a></li>
+                        </ul>
+                    {% endif %}
+                    {% if info_dict != null %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a>Welcome {{ info_dict.name }}</a></li>
+                            <li><a href="/logout">logout</a></li>
+                        </ul>
+                    {% endif %}
                 </div>
             </div>
         </nav>
