--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -143,6 +143,7 @@
                 <div class="text-center"><input style="font-size: 20px; font-family: Tempus Sans ITC;" type="submit"
                                                 value="Send Message"
                                                 class="btn btn-success btn-sendmessage"></div>
+                <span style="color: red;">{{ reminder }}</span>
             </form>
         </div>
     </div>
