update models, add interaction between database and frontend

--- a/templates/menu_detail.html
+++ b/templates/menu_detail.html
@@ -163,7 +163,7 @@
                 <div class="tips">
                     <h3
                             style="text-align: center; color: rgb(95, 184, 213); font-family: Tempus Sans ITC; font-size: 22px; text-shadow: 3px 3px 3px darkgray;">
-                        Please don't forget to write down your evaluation of this dish!</h3>
+                        Please don't forget to write down your comment of this dish!</h3>
                 </div>
 
                 {% if info_dict %}
